[package]
name = "accord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
matrix-sdk = "0.6.0"
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0"
dirs = "4.0.0"